In v9fs-2.6.38.5-21:
* Backport fs/9p: avoid debug OOPS when reading a long symlink
* Backport [PATCH 1/4] 9P: Fix race in p9_read_work()
* Backport [PATCH 2/4] 9P: fix test at the end of p9_write_work()
* Backport [PATCH 3/4] 9P: Fix race in p9_write_work()
* Backport [PATCH 4/4] 9P: Fix race between p9_write_work() and p9_fd_request()
* Backport 9P : Check errno validity

In v9fs-2.6.38.5-20:
* Get xattr and posix acl support working

In v9fs-2.6.38.5-19:
* [block/9nbd] fix bug that caused munge auth to fail sometimes

In v9fs-2.6.38.5-18:
* [net/9p] restore p9_client_auth()
* [block/9nbd] add 9P network block device

In v9fs-2.6.38.5-17:
* disable async readpage by default
  and add asyncreadpage mount option (issue 108)
* fix rdma transport compilation

In v9fs-2.6.38.5-16:
* change performance fixes to minimize upstream change

In v9fs-2.6.38.5-15:
* don't allow a flush to be interrupted (issue 81)
* after a flushed Tclunk/Tremove, fid should remain valid (issue 81)

In v9fs-2.6.38.5-14:
* Temporary workaround for transport hang (issue 65)
* Possible locking fix for kernel panic in p9_client_cb() (issue 89)

In v9fs-2.6.38.5-13:
* Re-export module symbol p9_client_cb() to make in-kernel 9pnet.ko happy

In v9fs-2.6.38.5-12:
* Make large writes asynchronous (issue 86)
* fs/9p: Fix inode i_size update in file_write (backport)
* fs/9p: Update zero-copy implementation in 9p (partial backport)

In v9fs-2.6.38.5-11:
* Make large reads asynchronous (issue 86)
* Emit console messages on slow RPC response
* net/9p: replace p9_poll_task with a work (backport)
* net/9p: use system_wq instead of p9_mux_wq (backport)
* net/9p: Convert the in the 9p rpc call path to GFP_NOFS (backport)
* net/9p: fix client code to fail more gracefully on protocol error (backport)
* net/9p: p9_idpool_get return -1 on error (backport)

In v9fs-2.6.38.5-10:
* Make readpage implementation asynchronous (issue 85)

In v9fs-2.6.38.5-9:
* Handle signals properly in file_do_lock (issue 82)
